2004-05-26  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/ReferenceDialog/SelectReferenceDialog.cs: fix up
	per edd's suggestions. Now we select a valid node if possible when
	you remove, and the remove button is only sensitive when an iter is
	selected.

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* Services/ProjectService/DefaultProjectService.cs: move the call to
	GenerateMakefiles when the solution is closed to somewhere that
	actually generates a makefile.

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/Combine/Combine.cs: actually tested with a solution
	with 2 projects in it, one that references the other. It works now,
	building, cleaning, running, etc.
	* Internal/Templates/ProjectTemplates/CombineDescriptor.cs: setup
	OutputDirectory properly by default.

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/Project/AbstractProject.cs: ignore .pidb, .mdsx and
	make.sh.

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* Services/Project/DefaultProjectService.cs: auto-generate makefiles
	on changes. I think i hit all the needed events, lets see.

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/DefaultParserService.cs: Update Monodoc
	and IsAs resolvers.
	* Services/ParserService/IParserService.cs: Expose new search type
	method for use in Monodoc and IsAs resolvers.
	* Internal/Parser/IParser.cs: Update Monodoc and IsAs resolvers.
	* Gui/Pads/ClassScout/ClassScout.cs: add a null check to workaround
	a *strange* nullref that keeps popping up.

2004-05-26  Lluis Sanchez Gual  <lluis@ximian.com>

	* Services/ParserService/DefaultParserService.cs: Type names for fields,
	  parameters, base classes and so on come unresolved from the parser
	  (without namespace information). They must be resolved before adding them
	  to the database. This is done through the method ResolveTypes.
	* CodeCompletionDatabase.cs: Resolve type names before adding the class to
	  the database.